--- a/index.html
+++ b/index.html
@@ -89,9 +89,8 @@
 	</ul>
 	
 <div align="right">	
-<h2>Vous povez contacter avec moi</h2>
+<h2>Vous pouvez contacter avec moi</h2>
 	<ul>
-		<li><a href=https://vk.com/quousque_tandem target="_blank">Mon VK</a></li>
-		<li><a href=https://www.instagram.com/free_poetess/ target="_blank">Instagram</a></li>
+		<li><a href=https://vk.com/id560642644 target="_blank">Mon VK</a></li>
 	</ul>
 </div>	
